--- a/07-spring-boot-spring-mvc/01-thymeleaftdemo-helloworld/src/main/resources/templates/student-form.html
+++ b/07-spring-boot-spring-mvc/01-thymeleaftdemo-helloworld/src/main/resources/templates/student-form.html
@@ -12,6 +12,14 @@
       <br><br>
         Last name: <input type="text" th:field="*{lastName}">
       <br><br>
+        Country:
+        <select th:field="*{country}">
+            <option th:value="Brazil">Brazil</option>
+            <option th:value="France">France</option>
+            <option th:value="Germany">Germany</option>
+            <option th:value="Indian">Indian</option>
+        </select>
+        <br><br>
       <input type="submit">
     </form>
 </body>
