--- a/07-spring-boot-spring-mvc/01-thymeleaftdemo-helloworld/src/main/resources/templates/student-form.html
+++ b/07-spring-boot-spring-mvc/01-thymeleaftdemo-helloworld/src/main/resources/templates/student-form.html
@@ -17,6 +17,14 @@
             <option th:each="tempCountry : ${countries}" th:value="${tempCountry}" th:text="${tempCountry}"/>
         </select>
         <br><br>
+
+        Favorite Programing Language:
+        <input type="radio" th:field="*{favoriteLanguage}" th:value="Go">Go</input>
+        <input type="radio" th:field="*{favoriteLanguage}" th:value="Java">Java</input>
+        <input type="radio" th:field="*{favoriteLanguage}" th:value="Python">Python</input>
+
+
+        <br><br>
       <input type="submit">
     </form>
 </body>
