--- a/07-spring-boot-spring-mvc/01-thymeleaftdemo-helloworld/src/main/resources/templates/student-form.html
+++ b/07-spring-boot-spring-mvc/01-thymeleaftdemo-helloworld/src/main/resources/templates/student-form.html
@@ -27,6 +27,11 @@
 
 
         <br><br>
+        Favorite Operating System:
+        <input type="checkbox" th:field="*{favoriteSystems}" th:value="Linux">Linux</input>
+        <input type="checkbox" th:field="*{favoriteSystems}" th:value="macOS">macOS</input>
+        <input type="checkbox" th:field="*{favoriteSystems}" th:value="'Microsoft Windows'">Microsoft Windows</input>
+        <br><br>
       <input type="submit">
     </form>
 </body>
