--- a/07-spring-boot-spring-mvc/01-thymeleaftdemo-helloworld/src/main/resources/templates/student-form.html
+++ b/07-spring-boot-spring-mvc/01-thymeleaftdemo-helloworld/src/main/resources/templates/student-form.html
@@ -28,9 +28,8 @@
 
         <br><br>
         Favorite Operating System:
-        <input type="checkbox" th:field="*{favoriteSystems}" th:value="Linux">Linux</input>
-        <input type="checkbox" th:field="*{favoriteSystems}" th:value="macOS">macOS</input>
-        <input type="checkbox" th:field="*{favoriteSystems}" th:value="'Microsoft Windows'">Microsoft Windows</input>
+        <input type="checkbox" th:field="*{favoriteSystems}" th:each="tempSystem : ${systems}" th:value="${tempSystem}" th:text="${tempSystem}"/>
+
         <br><br>
       <input type="submit">
     </form>
