--- a/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-form.html
+++ b/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-form.html
@@ -15,9 +15,13 @@
     <br><br>
     Last name (*): <input type="text" th:field="*{lastName}" />
 
+
+    <br><br>
+    Free passes: <input type="text" th:field="*{freePasses}" />
     <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}" class="error"></span>
     <br><br>
     <input type="submit" value="Submit">
+
 </form>
 </body>
 </html>
