--- a/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-confirmation.html
+++ b/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-confirmation.html
@@ -5,10 +5,16 @@
     <title>Customer Confirmation</title>
 </head>
 <body>
-The customer is confirmed: <span th:text="${customer.firstName + ' ' + customer.lastName} "
+
+The customer is confirmed: <span th:text="${customer.firstName + ' ' + customer.lastName}" />
+
 <br><br>
+
 Free passes: <span th:text="${customer.freePasses}" />
+
 <br><br>
+
 Postal code: <span th:text="${customer.postalCode}" />
+
 </body>
 </html>
