--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
@@ -18,6 +18,7 @@
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Email</th>
+                    <th>Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -25,6 +26,10 @@
                     <td th:text="${tempEmployee.firstName}"/>
                     <td th:text="${tempEmployee.lastName}"/>
                     <td th:text="${tempEmployee.email}"/>
+                    <td>
+                        <a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"
+                            class="btn btn-info btn-sm">Update</a>
+                    </td>
                 </tr>
             </tbody>
         </table>
