--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
     <title>luv2code Company Home Page</title>
 </head>
 <body>
-    <h2>luve2code Company Home Page</h2>
+    <h2>luve2code Company Home Page - 123 </h2>
     <hr>
     Welcome to the luv2code company home page!
 </body>
