--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -14,14 +14,14 @@
         <br><br>
         Role(s): <span sec:authentication="principal.authorities"></span>
     </p>
-    <hr>
-    <div sec:authentication="hasRole('MANAGER')">
+
+    <div sec:authorize="hasRole('MANAGER')" >
     <p>
         <a th:href="@{/leaders}">Leadership Meeting</a>
         (Only for Manager peeps)
     </p>
     </div>
-    <div sec:authentication="hasRole('ADMIN')">
+    <div sec:authorize="hasRole('ADMIN')">
     <p>
         <a th:href="@{/systems}">IT Systems Meeting</a>
         (Only for Admin peeps)
